[project]
name = "yt-downloader"
version = "0.1.1"
description = "Simpler interface to the yt-dlp video downloader."
authors = [
    { name = "kakeetopius", email = "pius.kakeeto@strathmore.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "inquirerpy>=0.3.4",
    "prettytable>=3.17.0",
    "requests>=2.32.5",
    "yt-dlp[default]>=2025.12.8",
]

[project.scripts]
ydl = "yt_downloader:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
